--- a/stubby.yml.example
+++ b/stubby.yml.example
@@ -104,7 +104,12 @@ listen_addresses:
   - 0::1
 
 ############################### DNSSEC SETTINGS ################################
-# Require DNSSEC validation.
+# Require DNSSEC validation. This will withhold answers with BOGUS DNSSEC
+# status and answers that could not be validated (i.e. with DNSSEC status
+# INDETERMINATE). Beware that if no DNSSEC trust-anchor is provided, or if
+# stubby is not able to fetch and validate the DNSSEC trust-anchor itself,
+# stubby will not return answers at all.  If DNSSEC validation is required,
+# a trust-anchor is also required.
 # dnssec: GETDNS_EXTENSION_TRUE
 
 # Stubby tries to fetch and validate the DNSSEC root trust anchor on the fly
