--- a/stubby.yml.example
+++ b/stubby.yml.example
@@ -108,8 +108,8 @@ listen_addresses:
 # status and answers that could not be validated (i.e. with DNSSEC status
 # INDETERMINATE). Beware that if no DNSSEC trust-anchor is provided, or if
 # stubby is not able to fetch and validate the DNSSEC trust-anchor itself,
-# stubby will not return answers at all.  If DNSSEC validation is required,
-# a trust-anchor is also required.
+# (using Zero configuration DNSSEC) stubby will not return answers at all.
+# If DNSSEC validation is required, a trust-anchor is also required.
 # dnssec: GETDNS_EXTENSION_TRUE
 
 # Stubby tries to fetch and validate the DNSSEC root trust anchor on the fly
